--- a/style.css
+++ b/style.css
@@ -5,11 +5,47 @@
     padding: 4px;
 }
 
-li {
-    padding: 4px;
-    display: inline
+li{
+    display: inline;
+    padding: 5px;
 }
 
 li:hover {
     text-decoration: underline;
+}
+
+button {
+    padding: 10px;
+    background-color: rgb(223, 223, 223);
+    border: none;
+}
+img {
+    margin-left: 20px;
+}
+
+.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 140px;
+}
+
+.search {
+    width: 400px;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.searchbar{
+    border: solid;
+    border-radius: 40px;
+    border-width: 1px;
+    padding: 5px
+}
+input {
+    border: none;
 }
