--- a/style.css
+++ b/style.css
@@ -69,12 +69,13 @@ input {
     border: solid;
     border-width: 1px;
     border-color: rgb(196, 196, 196);
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 0px;
     padding-left: 10px;
     padding-right:10px;
     justify-content: space-between;
     background-color: rgb(243, 243, 243);
+    margin: 0;
 }
 footer {
     position: fixed;
